--- a/css/style.css
+++ b/css/style.css
@@ -1,57 +1,39 @@
 form {
-    /* Apenas para centralizar o form na página */
+    width: 300px;
     margin: 0 auto;
-    width: 400px;
-    /* Para ver as bordas do formulário */
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 1em;
 }
 
-form div + div {
-    margin-top: 1em;
-}
-
-label {
-    /*Para ter certeza que todas as labels tem o mesmo tamanho e estão propriamente alinhadas */
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
     display: inline-block;
-    width: 90px;
-    text-align: right;
-}
-
-input, textarea {
-    /* Para certificar-se que todos os campos de texto têm as mesmas configurações de fonte. Por padrão, textareas ter uma fonte monospace*/
-    font: 1em sans-serif;
-
-    /* Para dar o mesmo tamanho a todos os campo de texto */
-    width: 300px;
-    -moz-box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     box-sizing: border-box;
-
-    /* Para harmonizar o look & feel das bordas nos campos de texto*/
-    border: 1px solid #999;
 }
 
-input:focus, textarea:focus {
-    /* Dar um pouco de destaque nos elementos ativos */
-    border-color: #000;
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 15px 32px;;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
-textarea {
-    /* Para alinhar corretamente os campos de texto de várias linhas com sua label*/
-    vertical-align: top;
-
-    /* Para dar espaço suficiente para digitar algum texto */
-    height: 5em;
-
-    /* Para permitir aos usuários redimensionarem qualquer textarea verticalmente. Ele não funciona em todos os browsers */
-    resize: vertical;
+input[type=submit]:hover {
+    background-color: #45a049;
 }
-.button {
-    /* Para posicionar os botões para a mesma posição dos campos de texto */
-    padding-left: 90px; /* mesmo tamanho que os elementos do tipo label */
-}
-button {
-    /* Esta margem extra representa aproximadamente o mesmo espaço que o espaço entre as labels e os seus campos de texto*/
-    margin-left: .5em;
+
+div {
+    border-radius: 0.5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    margin: 0 auto;
 }
