--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.ribbon {
+    position: relative;
+    top: -19px;
+    right: -3px;
+}
+
+
 form {
     width: 300px;
     margin: 0 auto;
@@ -18,7 +25,7 @@ input[type=text], select {
 
 input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #00008B;
     color: white;
     padding: 15px 32px;;
     margin: 8px 0;
@@ -28,12 +35,18 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #0000CD;
 }
 
 div {
     border-radius: 0.5px;
-    background-color: #f2f2f2;
     padding: 20px;
     margin: 0 auto;
+}
+
+html {
+  font-family: sans-serif; /* 1 */
+  line-height: 1.15; /* 2 */
+  -ms-text-size-adjust: 100%; /* 3 */
+  -webkit-text-size-adjust: 100%; /* 3 */
 }
